--- a/KeLi.FormMvc.App/KeLi.FormMvc.App.csproj
+++ b/KeLi.FormMvc.App/KeLi.FormMvc.App.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{EC1C8D79-CC72-4313-A747-0125FD442AAE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>KeLi.MvcUsage.App</RootNamespace>
-    <AssemblyName>KeLi.MvcUsage.App</AssemblyName>
+    <RootNamespace>KeLi.FormMvc.App</RootNamespace>
+    <AssemblyName>KeLi.FormMvc.App</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -55,19 +55,19 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Views\PersonForm.cs">
+    <Compile Include="Views\PersonFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\PersonForm.Designer.cs">
-      <DependentUpon>PersonForm.cs</DependentUpon>
+    <Compile Include="Views\PersonFrm.Designer.cs">
+      <DependentUpon>PersonFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\PersonForm.resx">
-      <DependentUpon>PersonForm.cs</DependentUpon>
+    <EmbeddedResource Include="Views\PersonFrm.resx">
+      <DependentUpon>PersonFrm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
